--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    
     <main>
       <article data-testid="test-profile-card">
         <figure class="avatar-section">
@@ -20,6 +21,13 @@
 
         <div class="content">
           <header>
+            <nav class="main-nav">
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+              </ul>
+            </nav>
             <h2 data-testid="test-user-name">Ife Adewumi</h2>
           </header>
 
